--- a/segurenta/src/index.html
+++ b/segurenta/src/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src=”http://maps.googleapis.com/maps/api/js?key=AIzaSyB8PiES1ULHvO4eRUG7dJYfu5QeLtz1Qas"></script>
 </head>
 
 <body>
